projekt_do_pracy_na_labach/fiszki_backend/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-db
  namespace: app-namespace
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        namespace: app-namespace
  egress:
  - to:
    - namespaceSelector:
        namespace: app-namespace
